# trusts

./: .gitignore
389-ds-base-2.4.5+dfsg1-1/debian/: 389-ds-base-dev.install  389-ds-base-libs.install  389-ds-base.dirs  389-ds-base.install  389-ds-base.links  389-ds-base.lintian-overrides  389-ds-base.postinst  389-ds-base.postrm  389-ds-base.prerm  README.Debian  changelog  cockpit-389-ds.install  control  copyright  gitlab-ci.yml  python3-lib389.install  rules  watch
389-ds-base-2.4.5+dfsg1-1/debian/patches/: allow-newer-crates.diff  base64-0.21.diff  fix-saslpath.diff  series  use-packaged-rust-registry.diff
389-ds-base-2.4.5+dfsg1-1/debian/source/: include-binaries  lintian-overrides  local-options
389-ds-base-2.4.5+dfsg1-1/debian/tests/: control  setup
ipa-4.11.3/: configure.ac
ipa-4.11.3/daemons/ipa-slapi-plugins/ipa-globalcatalog/: Makefile.am  README.md  global-catalog-conf.ldif  ipa_globalcatalog.c
ipa-4.11.3/ipapython/: ipautil.py
ipa-4.11.3/ipaserver/: dcerpc.py
krb5-1.21.3/debian/: changelog  control  krb5-kdc-ldap.install  krb5-kdc.install  libkadm5clnt-mit12.symbols  libkadm5srv-mit12.symbols  libkrb5support0.symbols  rules
krb5-1.21.3/debian/patches/: series  (+4 more)
samba-4.21.4/debian/: README.source.md  changelog  control  copyright  ctdb.install  gbp.conf  libldb2.symbols  libtalloc2.symbols  libtdb1.symbols  libtevent0t64.symbols  python3-ldb.install  python3-samba.install  rules  samba-common-bin.install  samba-dev.install  samba-libs.install  samba-libs.symbols  samba-vfs-ceph.install  samba.install  watch
sssd-2.9.5/debian/: changelog
(+45 files in other folders)
